Fixed alignment problem in download page (https://github.com/restlet/restlet-marketing/issues/64)

--- a/modules/com.restlet/stylesheets/styles.css
+++ b/modules/com.restlet/stylesheets/styles.css
@@ -989,6 +989,10 @@ form,form>input {
 	position: relative;
 }
 
+#newsletter .elements {
+	position: relative;
+}
+
 #newsletter .notifications > h4 {
 	padding-left: 0px;
 }
